# funROI

./: .coveragerc  .gitignore  HISTORY.rst  LICENSE  README.md  README.rst  funROI-trial.ipynb  pyproject.toml  readthedocs.yaml  requirements.in  requirements.txt
.github/workflows/: tests.yml
doc/: Makefile  requirements.txt
doc/source/: conf.py  index.rst  sg_execution_times.rst
doc/source/api/: funROI.analysis.rst  funROI.datasets.rst  funROI.first_level.rst  funROI.rst  modules.rst
examples/: GALLERY_HEADER.rst  demo.py
funROI/: __init__.py  _registry.py  _surface.py  analysis.py  contrast.py  first_level.py  froi.py  localizer.py  parcels.py  settings.py  utils.py  viz.py
funROI/analysis/: __init__.py  effect.py  effect_estimator.py  fconn.py  froi_gen.py  froi_generator.py  li.py  overlap.py  parcels_gen.py  parcels_generator.py  spcorr.py  surface_parcels_gen.py  utils.py
funROI/analysis/tests/: test_effect.py  test_fconn.py  test_froi_gen.py  test_li.py  test_overlap.py  test_parcels_gen.py  test_spcorr.py  test_surface_parcels_gen.py  test_utils.py  utils.py
funROI/datasets/: __init__.py  hcp.py
funROI/datasets/tests/: test_hcp.py
funROI/first_level/: __init__.py  nilearn.py  spm.py  utils.py
funROI/first_level/tests/: test_nilearn.py  test_spm.py  test_utils.py  utils.py
funROI/notebooks/: demo.ipynb
funROI/tests/: test_contrast.py  test_froi.py  test_parcels.py  test_registry.py  test_settings.py  test_utils.py  test_viz.py
nilearn_mod/nilearn/: _version.py
nilearn_mod/nilearn/plotting/surface/: surf_plotting.py
notebooks/: demo.ipynb  demo_testing.ipynb  inspect_overlap.ipynb
